Fix DCHECK failure in extension_updater when scheduling first check

There's a DCHECK in ExtensionUpdater::ScheduleNextCheck that tries to
ensure we aren't scheduling the next check unreasonably soon (<= 1
second). But we serialize the "scheduled next check time" in prefs and
read that on next startup, and use it as long as it isn't in the past or
too far in the future, but if you get unlucky it can be < 1 second in
the future, and you'll hit this DCHECK.

BUG=654804

Review-Url: https://codereview.chromium.org/2562963003
Cr-Commit-Position: refs/heads/master@{#438697}

Former-commit-id: a94f63df7f0146e3532c22efb8e5468225e951c0